--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build: .
     volumes:
       - ./logs:/app/logs
+      - ./data:/app/data
     environment:
       - TZ=UTC
     restart: unless-stopped 
