--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ requests==2.31.0
 beautifulsoup4==4.12.2
 python-dotenv==1.0.0
 loguru==0.7.2
-playwright==1.42.0 
+playwright==1.42.0
+pymongo==4.6.1 
