--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,7 @@ beautifulsoup4==4.12.2
 python-dotenv==1.0.0
 loguru==0.7.2
 playwright==1.42.0
-pymongo==4.6.1 
+pymongo==4.6.1
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+pydantic==2.5.0 
